CP Practice - 28th July 2024, Segment Trees Striver

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -2885,6 +2885,7 @@
      "iopub.status.idle": "2024-07-27T15:05:27.103001Z",
      "shell.execute_reply": "2024-07-27T15:05:27.102480Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.235099,
      "end_time": "2024-07-27T15:05:27.104346",
@@ -2965,21 +2966,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0374c980",
+   "metadata": {},
+   "source": [
+    "LC Weekly - 28th July 2024"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d518d53",
    "metadata": {
-    "papermill": {
-     "duration": 0.007276,
-     "end_time": "2024-07-27T15:05:27.119387",
-     "exception": false,
-     "start_time": "2024-07-27T15:05:27.112111",
-     "status": "completed"
-    },
+    "lines_to_next_cell": 1,
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def canAliceWin(nums: list[int]) -> bool:\n",
+    "    sds = dds = 0\n",
+    "    for n in nums:\n",
+    "        if n >= 10:\n",
+    "            dds += n\n",
+    "        else:\n",
+    "            sds += n\n",
+    "\n",
+    "    return sds != dds\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canAliceWin([1,2,3,4,10]) == False\n",
+    "assert canAliceWin([1,2,3,4,5,14]) == True\n",
+    "assert canAliceWin([5,5,5,25]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cbc3d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nonSpecialCount(L: int, R: int) -> int:\n",
+    "    \"\"\"\n",
+    "    A number is special iff it is a square of a prime number\n",
+    "\n",
+    "    1. Generate all primes till sqrt(R).\n",
+    "    2. Iterate through list of primes if p * p is within L and R, we have one special number counted.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def SOE(N: int) -> list[int]:\n",
+    "        \"Generate list of primes using Seive of erastosthenes\"\n",
+    "        primes: list[int] = [True for i in range(N + 1)]\n",
+    "        primes[0] = primes[1] = False\n",
+    "        for i in range(2, N + 1):\n",
+    "            if primes[i]:\n",
+    "                primes[2*i::i] = [False] * len(primes[2*i::i])\n",
+    "        return [i for i in range(2, N + 1) if primes[i]]\n",
+    "\n",
+    "    primes = SOE(int(math.sqrt(R)))\n",
+    "    special_count = 0\n",
+    "    for p in primes:\n",
+    "        if L <= p * p <= R:\n",
+    "            special_count += 1\n",
+    "\n",
+    "    return R - L + 1 - special_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert nonSpecialCount(5, 7) == 3\n",
+    "assert nonSpecialCount(4, 16) == 11"
+   ]
   }
  ],
  "metadata": {
