Segment Trees Striver - 2, CP Practice: 29th July 2024,
- Lazy Propagation
- Codechef Coin Flip

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -3032,6 +3032,7 @@
      "iopub.status.idle": "2024-07-28T15:14:55.424783Z",
      "shell.execute_reply": "2024-07-28T15:14:55.424338Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014017,
      "end_time": "2024-07-28T15:14:55.425770",
@@ -3071,6 +3072,53 @@
     "# Testing the solution\n",
     "assert nonSpecialCount(5, 7) == 3\n",
     "assert nonSpecialCount(4, 16) == 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "682e8569",
+   "metadata": {},
+   "source": [
+    "CP Practice: Once again - 582B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd3663f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LNDS(N: int, T: int, nums: list[int]) -> int:\n",
+    "\n",
+    "    # Store the maximum non decreasing subseq\n",
+    "    subseq: list[int] = []\n",
+    "\n",
+    "    # Iterate N times or T times whichever is smaller\n",
+    "    # Ensure the loop runs only once if t is large enough to\n",
+    "    # make further processing redundant\n",
+    "    while N and T:\n",
+    "        initial: int = len(subseq)\n",
+    "        for n in nums:\n",
+    "            idx = bisect.bisect_right(subseq, n)\n",
+    "            if idx == len(subseq):\n",
+    "                subseq.append(n)\n",
+    "            else:\n",
+    "                subseq[idx] = n\n",
+    "\n",
+    "        # diff represents how much the LIS can potentially grow in one iteration.\n",
+    "        diff = len(subseq) - initial\n",
+    "\n",
+    "        N, T = N - 1, T - 1\n",
+    "\n",
+    "    # length of the longest non-decreasing subsequence found after the first complet\n",
+    "    # pass through the array, plus the additional length contributed by the repetitions\n",
+    "    return len(subseq) + diff * T\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert LNDS(4, 3, [3,1,4,2]) == 5\n",
+    "assert LNDS(3, 2, [1,2,3]) == 4\n",
+    "assert LNDS(3, 2, [1,3,2]) == 3"
    ]
   }
  ],
