--- a/study/striver-A2Z/19-range-query-DS.ipynb
+++ b/study/striver-A2Z/19-range-query-DS.ipynb
@@ -5,10 +5,10 @@
    "id": "127194e9",
    "metadata": {
     "papermill": {
-     "duration": 0.002947,
-     "end_time": "2024-07-28T15:14:57.298087",
+     "duration": 0.002747,
+     "end_time": "2024-07-29T03:10:55.750676",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.295140",
+     "start_time": "2024-07-29T03:10:55.747929",
      "status": "completed"
     },
     "tags": []
@@ -23,10 +23,10 @@
    "id": "8fc69bda",
    "metadata": {
     "papermill": {
-     "duration": 0.001482,
-     "end_time": "2024-07-28T15:14:57.301334",
+     "duration": 0.002025,
+     "end_time": "2024-07-29T03:10:55.754936",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.299852",
+     "start_time": "2024-07-29T03:10:55.752911",
      "status": "completed"
     },
     "tags": []
@@ -41,17 +41,17 @@
    "id": "e6216c04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-28T15:14:57.305479Z",
-     "iopub.status.busy": "2024-07-28T15:14:57.305125Z",
-     "iopub.status.idle": "2024-07-28T15:14:57.311551Z",
-     "shell.execute_reply": "2024-07-28T15:14:57.311020Z"
+     "iopub.execute_input": "2024-07-29T03:10:55.760539Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.760125Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.766767Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.766309Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.009863,
-     "end_time": "2024-07-28T15:14:57.312667",
+     "duration": 0.010893,
+     "end_time": "2024-07-29T03:10:55.767865",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.302804",
+     "start_time": "2024-07-29T03:10:55.756972",
      "status": "completed"
     },
     "tags": []
@@ -72,10 +72,10 @@
    "id": "99cdcc6c",
    "metadata": {
     "papermill": {
-     "duration": 0.00153,
-     "end_time": "2024-07-28T15:14:57.315670",
+     "duration": 0.001938,
+     "end_time": "2024-07-29T03:10:55.771872",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.314140",
+     "start_time": "2024-07-29T03:10:55.769934",
      "status": "completed"
     },
     "tags": []
@@ -90,17 +90,17 @@
    "id": "c4146656",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-28T15:14:57.319712Z",
-     "iopub.status.busy": "2024-07-28T15:14:57.319274Z",
-     "iopub.status.idle": "2024-07-28T15:14:57.329262Z",
-     "shell.execute_reply": "2024-07-28T15:14:57.328740Z"
+     "iopub.execute_input": "2024-07-29T03:10:55.777090Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.776580Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.786732Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.786318Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.013371,
-     "end_time": "2024-07-28T15:14:57.330514",
+     "duration": 0.013962,
+     "end_time": "2024-07-29T03:10:55.787824",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.317143",
+     "start_time": "2024-07-29T03:10:55.773862",
      "status": "completed"
     },
     "tags": []
@@ -181,10 +181,10 @@
    "id": "f24409ee",
    "metadata": {
     "papermill": {
-     "duration": 0.001471,
-     "end_time": "2024-07-28T15:14:57.333502",
+     "duration": 0.002041,
+     "end_time": "2024-07-29T03:10:55.791945",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.332031",
+     "start_time": "2024-07-29T03:10:55.789904",
      "status": "completed"
     },
     "tags": []
@@ -199,16 +199,16 @@
    "id": "968aa630",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-28T15:14:57.337423Z",
-     "iopub.status.busy": "2024-07-28T15:14:57.337096Z",
-     "iopub.status.idle": "2024-07-28T15:14:57.345185Z",
-     "shell.execute_reply": "2024-07-28T15:14:57.344759Z"
+     "iopub.execute_input": "2024-07-29T03:10:55.797161Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.796651Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.805223Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.804657Z"
     },
     "papermill": {
-     "duration": 0.011172,
-     "end_time": "2024-07-28T15:14:57.346226",
+     "duration": 0.01233,
+     "end_time": "2024-07-29T03:10:55.806282",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.335054",
+     "start_time": "2024-07-29T03:10:55.793952",
      "status": "completed"
     },
     "tags": []
@@ -264,10 +264,10 @@
    "id": "1e17895d",
    "metadata": {
     "papermill": {
-     "duration": 0.001549,
-     "end_time": "2024-07-28T15:14:57.349350",
+     "duration": 0.001973,
+     "end_time": "2024-07-29T03:10:55.810275",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.347801",
+     "start_time": "2024-07-29T03:10:55.808302",
      "status": "completed"
     },
     "tags": []
@@ -282,17 +282,17 @@
    "id": "70243b1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-28T15:14:57.354342Z",
-     "iopub.status.busy": "2024-07-28T15:14:57.354004Z",
-     "iopub.status.idle": "2024-07-28T15:14:57.362672Z",
-     "shell.execute_reply": "2024-07-28T15:14:57.362211Z"
+     "iopub.execute_input": "2024-07-29T03:10:55.816155Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.815716Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.824653Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.824216Z"
     },
     "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.011948,
-     "end_time": "2024-07-28T15:14:57.363712",
+     "duration": 0.012706,
+     "end_time": "2024-07-29T03:10:55.825741",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.351764",
+     "start_time": "2024-07-29T03:10:55.813035",
      "status": "completed"
     },
     "tags": []
@@ -348,10 +348,10 @@
    "id": "c520ca5c",
    "metadata": {
     "papermill": {
-     "duration": 0.001543,
-     "end_time": "2024-07-28T15:14:57.366786",
+     "duration": 0.001988,
+     "end_time": "2024-07-29T03:10:55.829765",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.365243",
+     "start_time": "2024-07-29T03:10:55.827777",
      "status": "completed"
     },
     "tags": []
@@ -366,16 +366,17 @@
    "id": "49795567",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-28T15:14:57.371005Z",
-     "iopub.status.busy": "2024-07-28T15:14:57.370497Z",
-     "iopub.status.idle": "2024-07-28T15:14:57.379402Z",
-     "shell.execute_reply": "2024-07-28T15:14:57.378884Z"
+     "iopub.execute_input": "2024-07-29T03:10:55.834911Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.834498Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.843578Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.843045Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
-     "duration": 0.012148,
-     "end_time": "2024-07-28T15:14:57.380496",
+     "duration": 0.012886,
+     "end_time": "2024-07-29T03:10:55.844636",
      "exception": false,
-     "start_time": "2024-07-28T15:14:57.368348",
+     "start_time": "2024-07-29T03:10:55.831750",
      "status": "completed"
     },
     "tags": []
@@ -433,6 +434,239 @@
     "# Testing the solution\n",
     "assert countInverions([2,5,1,3,4], 5) == 4"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e7822d0",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001937,
+     "end_time": "2024-07-29T03:10:55.848612",
+     "exception": false,
+     "start_time": "2024-07-29T03:10:55.846675",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Range Query DS - 2\n",
+    "Video Link: https://www.youtube.com/watch?v=rXnXRU8yMF0&t=5s\n",
+    "Lazy propagation in Segment trees: Instead of being given point updates, what if we are given range updates?\n",
+    "1. For every node in the corresponding segment tree, create a lazy node to store impending updates.\n",
+    "2. For every update operation, if there are previous impending updates update node and propagate to children\n",
+    "3. Check:\n",
+    "      - No overlap: return\n",
+    "      - Full overlap: update node (+val * count of nodes responsible), lazy propagate to children (iff exists)\n",
+    "      - Partial overlap: Update left, update right return left + right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0ded5ae4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-29T03:10:55.853762Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.853358Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.864691Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.864176Z"
+    },
+    "papermill": {
+     "duration": 0.01513,
+     "end_time": "2024-07-29T03:10:55.865734",
+     "exception": false,
+     "start_time": "2024-07-29T03:10:55.850604",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class RangeSumQueryLazy:\n",
+    "    def __init__(self, nums: list[int]) -> None:\n",
+    "        self.N = len(nums)\n",
+    "        self.nums = nums\n",
+    "        self.segment_tree = [0 for i in range(4 * self.N)]\n",
+    "        self.lazy = [0 for i in range(4 * self.N)]\n",
+    "        self.build(0, self.N - 1, 0)\n",
+    "\n",
+    "    def build(self, low: int, high: int, idx: int) -> None:\n",
+    "        if low == high:\n",
+    "            self.segment_tree[idx] = self.nums[low]\n",
+    "        else:\n",
+    "            mid, left_idx, right_idx = (low + high) // 2, 2 * idx + 1, 2 * idx + 2\n",
+    "            self.build(low, mid, left_idx)\n",
+    "            self.build(mid + 1, high, right_idx)\n",
+    "            self.segment_tree[idx] = self.segment_tree[left_idx] + self.segment_tree[right_idx]\n",
+    "\n",
+    "    def update(self, low: int, high: int, idx: int, left: int, right: int, val: int) -> None:\n",
+    "        # Update any impending updates\n",
+    "        left_idx, right_idx = 2 * idx + 1, 2 * idx + 2\n",
+    "        if self.lazy[idx] != 0:\n",
+    "            self.segment_tree[idx] = self.lazy[idx] * (high - low + 1)\n",
+    "            # If children exists, lazy propagate\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx] = self.lazy[right_idx] = self.lazy[idx]\n",
+    "            self.lazy[idx] = 0\n",
+    "\n",
+    "        # Check overlap conditions\n",
+    "        if left <= low <= high <= right:\n",
+    "            self.segment_tree[idx] = val * (high - low + 1)\n",
+    "            # If children exists, lazy propagate\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx] = self.lazy[right_idx] = val\n",
+    "\n",
+    "        elif high < left or right < low:\n",
+    "            return\n",
+    "        else:\n",
+    "            mid = (low + high) // 2\n",
+    "            self.update(low, mid, left_idx, left, right, val)\n",
+    "            self.update(mid + 1, high, right_idx, left, right, val)\n",
+    "            self.segment_tree[idx] = self.segment_tree[left_idx] + self.segment_tree[right_idx]\n",
+    "\n",
+    "    def query(self, low: int, high: int, idx: int, left: int, right: int) -> int:\n",
+    "        # Update any impending updates\n",
+    "        left_idx, right_idx = 2 * idx + 1, 2 * idx + 2\n",
+    "        if self.lazy[idx] != 0:\n",
+    "            self.segment_tree[idx] = self.lazy[idx] * (high - low + 1)\n",
+    "            # If children exists, lazy propagate\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx] = self.lazy[right_idx] = self.lazy[idx]\n",
+    "            self.lazy[idx] = 0\n",
+    "\n",
+    "        # Check overlap conditions\n",
+    "        if left <= low <= high <= right:\n",
+    "            return self.segment_tree[idx]\n",
+    "        elif high < left or right < low:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            mid = (low + high) // 2\n",
+    "            return self.query(low, mid, left_idx, left, right) + self.query(mid + 1, high, right_idx, left, right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "rsql = RangeSumQueryLazy([1,4,2,1,3,1])\n",
+    "assert rsql.query(0, rsql.N - 1, 0, 0, 5) == 12\n",
+    "rsql.update(0, rsql.N - 1, 0, 2, 4, 5)\n",
+    "assert rsql.query(0, rsql.N - 1, 0, 0, 5) == 21\n",
+    "rsql.update(0, rsql.N - 1, 0, 0, 2, 2)\n",
+    "assert rsql.query(0, rsql.N - 1, 0, 0, 3) == 11\n",
+    "rsql.update(0, rsql.N - 1, 0, 2, 3, 4)\n",
+    "assert rsql.query(0, rsql.N - 1, 0, 3, 5) == 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f6193c8",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00227,
+     "end_time": "2024-07-29T03:10:55.870202",
+     "exception": false,
+     "start_time": "2024-07-29T03:10:55.867932",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Codechef Flip Coins: https://www.codechef.com/problems/FLIPCOIN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a62a3890",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-29T03:10:55.875227Z",
+     "iopub.status.busy": "2024-07-29T03:10:55.874841Z",
+     "iopub.status.idle": "2024-07-29T03:10:55.887053Z",
+     "shell.execute_reply": "2024-07-29T03:10:55.886570Z"
+    },
+    "papermill": {
+     "duration": 0.015986,
+     "end_time": "2024-07-29T03:10:55.888174",
+     "exception": false,
+     "start_time": "2024-07-29T03:10:55.872188",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "CoinTuple = collections.namedtuple('CoinTuple', ['heads', 'tails'])\n",
+    "class FlipCoins:\n",
+    "    def __init__(self, N: int) -> None:\n",
+    "        self.N = N\n",
+    "        self.coins: list[int] = [0 for i in range(N)]\n",
+    "        self.segment_tree: list[CoinTuple] = [CoinTuple(0, 0) for i in range(4 * N)]\n",
+    "        self.lazy: list[bool] = [False for i in range(4 * N)]\n",
+    "        self.build(0, self.N - 1, 0)\n",
+    "\n",
+    "    def build(self, low: int, high: int, idx: int) -> None:\n",
+    "        if low == high:\n",
+    "            self.segment_tree[idx] = CoinTuple(0, 1)\n",
+    "        else:\n",
+    "            mid, left_idx, right_idx = (low + high) // 2, 2 * idx + 1, 2 * idx + 2\n",
+    "            self.build(low, mid, left_idx)\n",
+    "            self.build(mid + 1, high, right_idx)\n",
+    "            left_tuple = self.segment_tree[left_idx]\n",
+    "            right_tuple = self.segment_tree[right_idx]\n",
+    "            self.segment_tree[idx] = CoinTuple(left_tuple.heads + right_tuple.heads, left_tuple.tails + right_tuple.tails)\n",
+    "\n",
+    "    def update(self, low: int, high: int, idx: int, left: int, right: int) -> None:\n",
+    "        left_idx, right_idx = 2 * idx + 1, 2 * idx + 2\n",
+    "\n",
+    "        # Update if there are impending updates\n",
+    "        if self.lazy[idx]:\n",
+    "            self.segment_tree[idx] = CoinTuple(self.segment_tree[idx].tails, self.segment_tree[idx].heads)\n",
+    "            self.lazy[idx] = False\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx], self.lazy[right_idx] = not self.lazy[left_idx], not self.lazy[right_idx]\n",
+    "\n",
+    "        # Check for overlaps\n",
+    "        if left <= low <= high <= right:\n",
+    "            self.segment_tree[idx] = CoinTuple(self.segment_tree[idx].tails, self.segment_tree[idx].heads)\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx], self.lazy[right_idx] = not self.lazy[left_idx], not self.lazy[right_idx]\n",
+    "        elif high < left or right < low:\n",
+    "            return\n",
+    "        else:\n",
+    "            mid = (low + high) // 2\n",
+    "            self.update(low, mid, left_idx, left, right)\n",
+    "            self.update(mid + 1, high, right_idx, left, right)\n",
+    "            left_tuple = self.segment_tree[left_idx]\n",
+    "            right_tuple = self.segment_tree[right_idx]\n",
+    "            self.segment_tree[idx] = CoinTuple(left_tuple.heads + right_tuple.heads, left_tuple.tails + right_tuple.tails)\n",
+    "\n",
+    "    def query(self, low: int, high: int, idx: int, left: int, right: int) -> int:\n",
+    "        left_idx, right_idx = 2 * idx + 1, 2 * idx + 2\n",
+    "\n",
+    "        # Update if there are impending updates\n",
+    "        if self.lazy[idx]:\n",
+    "            self.segment_tree[idx] = CoinTuple(self.segment_tree[idx].tails, self.segment_tree[idx].heads)\n",
+    "            self.lazy[idx] = False\n",
+    "            if low != high:\n",
+    "                self.lazy[left_idx], self.lazy[right_idx] = not self.lazy[left_idx], not self.lazy[right_idx]\n",
+    "\n",
+    "        # Check overlaps\n",
+    "        if left <= low <= high <= right:\n",
+    "            return self.segment_tree[idx].heads\n",
+    "        elif right < low or high < left:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            mid = (low + high) // 2\n",
+    "            return self.query(low, mid, left_idx, left, right) + self.query(mid + 1, high, right_idx, left, right)\n",
+    "\n",
+    "# Testing the solution\n",
+    "fc = FlipCoins(4)\n",
+    "assert fc.query(0, fc.N - 1, 0, 0, 3) == 0\n",
+    "fc.update(0, fc.N - 1, 0, 1, 2)\n",
+    "assert fc.query(0, fc.N - 1, 0, 0, 1) == 1\n",
+    "assert fc.query(0, fc.N - 1, 0, 0, 0) == 0\n",
+    "fc.update(0, fc.N - 1, 0, 0, 3)\n",
+    "assert fc.query(0, fc.N - 1, 0, 0, 3) == 2\n",
+    "assert fc.query(0, fc.N - 1, 0, 3, 3) == 1"
+   ]
   }
  ],
  "metadata": {
@@ -455,14 +689,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 1.360082,
-   "end_time": "2024-07-28T15:14:57.497046",
+   "duration": 1.38951,
+   "end_time": "2024-07-29T03:10:56.005403",
    "environment_variables": {},
    "exception": null,
    "input_path": "study/striver-A2Z/19-range-query-DS.ipynb",
    "output_path": "study/striver-A2Z/19-range-query-DS.ipynb",
    "parameters": {},
-   "start_time": "2024-07-28T15:14:56.136964",
+   "start_time": "2024-07-29T03:10:54.615893",
    "version": "2.6.0"
   }
  },
