CP Practice: 30th July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -3102,6 +3102,7 @@
      "iopub.status.idle": "2024-07-29T16:29:58.103523Z",
      "shell.execute_reply": "2024-07-29T16:29:58.102962Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014195,
      "end_time": "2024-07-29T16:29:58.104545",
@@ -3143,6 +3144,157 @@
     "assert LNDS(4, 3, [3,1,4,2]) == 5\n",
     "assert LNDS(3, 2, [1,2,3]) == 4\n",
     "assert LNDS(3, 2, [1,3,2]) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad731b0f",
+   "metadata": {},
+   "source": [
+    "LC POTD: https://leetcode.com/problems/minimum-deletions-to-make-string-balanced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83d1e043",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minimumDeletions(s: str) -> int:\n",
+    "    N = len(s)\n",
+    "\n",
+    "    # Count a's to the right of idx\n",
+    "    count = 0\n",
+    "    a_counts: list[int] = [0 for i in range(N)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        a_counts[i] = count\n",
+    "        if s[i] == 'a':\n",
+    "            count += 1\n",
+    "\n",
+    "    # Count b's to the left of idx\n",
+    "    count = 0\n",
+    "    b_counts: list[int] = [0 for i in range(N)]\n",
+    "    for i in range(N):\n",
+    "        b_counts[i] = count\n",
+    "        if s[i] == 'b':\n",
+    "            count += 1\n",
+    "\n",
+    "    left, right = 0, N - 1\n",
+    "    min_deletions, deletions = N, 0\n",
+    "    while left <= right:\n",
+    "        while left < right and s[left] == 'a':\n",
+    "            left += 1\n",
+    "        while left < right and s[right] == 'b':\n",
+    "            right -= 1\n",
+    "\n",
+    "        min_deletions = min(min_deletions, deletions + a_counts[left] - deletions // 2, deletions + b_counts[right] - deletions // 2)\n",
+    "        left, right, deletions = left + 1, right - 1, deletions + 2\n",
+    "\n",
+    "    return min_deletions\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minimumDeletions(\"ababaaaabbbbbaaababbbbbbaaabbaababbabbbbaabbbbaabbabbabaabbbababaa\") == 25\n",
+    "assert minimumDeletions(\"aababbab\") == 2\n",
+    "assert minimumDeletions(\"bbaaaaabb\") == 2\n",
+    "assert minimumDeletions(\"aabbb\") ==  minimumDeletions(\"aaaaa\") == minimumDeletions(\"bbb\") == 0\n",
+    "assert minimumDeletions(\"a\") == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af2f27cd",
+   "metadata": {},
+   "source": [
+    "Codeforces: Edu Round 168, Jul 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c25048ca",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def strong_password(s: str) -> str:\n",
+    "    password: list[str] = []\n",
+    "    replaced = False\n",
+    "    for ch in s:\n",
+    "        if password and password[-1] == ch and not replaced:\n",
+    "            password.append('a' if ch != 'a' else 'b')\n",
+    "            replaced = True\n",
+    "        password.append(ch)\n",
+    "\n",
+    "    if not replaced:\n",
+    "        password.append('a' if password[-1] != 'a' else 'b')\n",
+    "\n",
+    "    return ''.join(password)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert strong_password(\"a\") == \"ab\"\n",
+    "assert strong_password(\"aa\") == \"aba\"\n",
+    "assert strong_password(\"passw\") == \"pasasw\"\n",
+    "assert strong_password(\"aba\") == \"abab\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95566824",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def make_three_regions(N: int, grid: list[str]) -> int:\n",
+    "    counts = 0\n",
+    "    for i in range(1, N - 1):\n",
+    "        # Count for pattern in 1st row\n",
+    "        if grid[0][i - 1: i + 2] == \"...\" and grid[1][i - 1: i + 2] == \"x.x\":\n",
+    "            counts += 1\n",
+    "        # Count for pattern in 2nd row\n",
+    "        if grid[1][i - 1: i + 2] == \"...\" and grid[0][i - 1: i + 2] == \"x.x\":\n",
+    "            counts += 1\n",
+    "\n",
+    "    return counts\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert make_three_regions(8, [\".......x\", \".x.xx...\"]) == 1\n",
+    "assert make_three_regions(2, [\"..\", \"..\"]) == 0\n",
+    "assert make_three_regions(3, [\"xxx\", \"xxx\"]) == 0\n",
+    "assert make_three_regions(9, [\"..x.x.x.x\", \"x.......x\"]) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5eb0db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def even_positions(n: int, brackets: str) -> int:\n",
+    "    \"Greedy Approach\"\n",
+    "    cost = 0\n",
+    "    stack: list[int] = []\n",
+    "    for i in range(n):\n",
+    "        if brackets[i] == '(':\n",
+    "            stack.append(i)\n",
+    "        elif brackets[i] == ')' or stack:\n",
+    "            cost += i - stack.pop()\n",
+    "        else:\n",
+    "            stack.append(i)\n",
+    "\n",
+    "    return cost\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert even_positions(6, \"_(_)_)\") == 5\n",
+    "assert even_positions(2, \"_)\") == 1\n",
+    "assert even_positions(8, \"_)_)_)_)\") == 4\n",
+    "assert even_positions(8, \"_(_)_(_)\") == 8"
    ]
   }
  ],
