CP Practice - 31st July 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -3340,6 +3340,7 @@
      "iopub.status.idle": "2024-07-30T16:54:52.574173Z",
      "shell.execute_reply": "2024-07-30T16:54:52.573627Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014571,
      "end_time": "2024-07-30T16:54:52.575238",
@@ -3370,6 +3371,73 @@
     "assert even_positions(2, \"_)\") == 1\n",
     "assert even_positions(8, \"_)_)_)_)\") == 4\n",
     "assert even_positions(8, \"_(_)_(_)\") == 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de2c3b2",
+   "metadata": {},
+   "source": [
+    "#### Upsolving codeforces contest from yesterday"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9276ea18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maximize_root_better(N: int, values: list[int], parents: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    Let us do a binary search.\n",
+    "\n",
+    "    Check if we can add delta of Min - 0, Maximum - max(values).\n",
+    "\n",
+    "    We can add delta to a node if all subtrees can provide the value of delta. If for any\n",
+    "    node the value is lesser than delta, it could still be possible as long as its\n",
+    "    children have value equal to delta + delta_diff.\n",
+    "    Accumulate delta_diff until leaf node.\n",
+    "\n",
+    "    Time: O (N log N) - TLE in python\n",
+    "    \"\"\"\n",
+    "    def is_valid(target: int) -> bool:\n",
+    "        if target <= values[0]:\n",
+    "            return True\n",
+    "        elif not adjl[0]:\n",
+    "            return False\n",
+    "        else:\n",
+    "            stack: list[tuple[int, int]] = [(i, target - values[0]) for i in adjl[0]]\n",
+    "            while stack:\n",
+    "                curr, curr_target = stack.pop()\n",
+    "                if not adjl[curr] and curr_target > values[curr]:\n",
+    "                    return False\n",
+    "                else:\n",
+    "                    diff = max(curr_target - values[curr], 0)\n",
+    "                    for next_node in adjl[curr]:\n",
+    "                        stack.append((next_node, target + diff))\n",
+    "            return True\n",
+    "\n",
+    "    # Create the tree\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for node, parent in enumerate(parents, start=1):\n",
+    "        adjl[parent - 1].append(node)\n",
+    "\n",
+    "    # Do a binary search\n",
+    "    low, high = values[0], values[0] + max(values)\n",
+    "    while low <= high:\n",
+    "        mid = (low + high) // 2\n",
+    "        if is_valid(mid):\n",
+    "            low = mid + 1\n",
+    "        else:\n",
+    "            high = mid - 1\n",
+    "\n",
+    "    return high\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximize_root_better(5, [2,5,3,9,6], [3,1,5,2]) == 6\n",
+    "assert maximize_root_better(4, [0,1,0,2], [1,1,3]) == 1\n",
+    "assert maximize_root_better(2, [3], [0]) == 3"
    ]
   }
  ],
