CP Practice - 1st Aug 2024

--- a/practice/006.ipynb
+++ b/practice/006.ipynb
@@ -3401,6 +3401,7 @@
      "iopub.status.idle": "2024-07-31T17:30:18.028048Z",
      "shell.execute_reply": "2024-07-31T17:30:18.027572Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.017794,
      "end_time": "2024-07-31T17:30:18.029151",
@@ -3462,6 +3463,106 @@
     "assert maximize_root_better(5, [2,5,3,9,6], [3,1,5,2]) == 6\n",
     "assert maximize_root_better(4, [0,1,0,2], [1,1,3]) == 1\n",
     "assert maximize_root_better(2, [3], [0]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea6f332e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maximize_root(N: int, values: list[int], parents: list[int]) -> int:\n",
+    "    # Convert parents to adj list\n",
+    "    adjl: collections.defaultdict[int, list[int]] = collections.defaultdict(list)\n",
+    "    for node, parent in enumerate(parents, start=1):\n",
+    "        adjl[parent - 1].append(node)\n",
+    "\n",
+    "    # Do a BFS traversal to get the leaf nodes first, granted that the leaf\n",
+    "    # nodes might be visited later in time when we start poping,\n",
+    "    # neverthless if a node had a child, the child would be popped first\n",
+    "    queue: collections.deque[int] = collections.deque([0])\n",
+    "    order: list[int] = []\n",
+    "    while queue:\n",
+    "        curr = queue.popleft()\n",
+    "        order.append(curr)\n",
+    "        for next_node in adjl[curr]:\n",
+    "            queue.append(next_node)\n",
+    "\n",
+    "    # Traverse in reverse BFS order and calculate the maximum value it can have as a root\n",
+    "    dp: dict[int, int] = dict()\n",
+    "    while order:\n",
+    "        curr = order.pop()\n",
+    "        if not adjl[curr]:\n",
+    "            dp[curr] = values[curr]\n",
+    "        else:\n",
+    "            min_ = min(dp[next_node] for next_node in adjl[curr])\n",
+    "            dp[curr] = min(min_, (min_ + values[curr]) // 2)\n",
+    "\n",
+    "    # Find the maximum value that root node can have\n",
+    "    return values[0] + (min(dp[next_node] for next_node in adjl[0]) if adjl[0] else 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximize_root(4, [0,1,0,2], [1,1,3]) == 1\n",
+    "assert maximize_root(5, [2,5,3,9,6], [3,1,5,2]) == 6\n",
+    "assert maximize_root(2, [3], [0]) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a025e10",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def decoding_genome_memo_brute(N: int, M: int, k: int, forbidden: set[str]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(curr_ord: int, remaining: int) -> int:\n",
+    "        if remaining == 0:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            counts = 0\n",
+    "            for i in range(M):\n",
+    "                if curr_ord == -1 or chr(ord('a') + curr_ord) + chr(ord('a') + i) not in forbidden:\n",
+    "                    counts += backtrack(i, remaining - 1)\n",
+    "            return counts\n",
+    "\n",
+    "    return backtrack(-1, N)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert decoding_genome_memo_brute(3, 3, 2,  {\"ab\", \"ba\"}) == 17\n",
+    "assert decoding_genome_memo_brute(3, 3, 0, set()) == 27\n",
+    "assert decoding_genome_memo_brute(2, 1, 1, {\"aa\"}) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71dfb132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decoding_genome_brute(N: int, M: int, k: int, forbidden: set[str]) -> int:\n",
+    "    \"Time: O(N * M * M), Space: O(M)\"\n",
+    "    dp: list[int] = [1 for i in range(-1, M)]\n",
+    "    for remaining in range(1, N + 1):\n",
+    "        next_dp: list[int] = [0 for i in range(-1, M)]\n",
+    "        for curr_ord in range(M - 1, -2, -1):\n",
+    "            for next_ord in range(M):\n",
+    "                if curr_ord == -1 or chr(ord('a') + curr_ord) + chr(ord('a') + next_ord) not in forbidden:\n",
+    "                    next_dp[curr_ord + 1] += dp[next_ord + 1]\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert decoding_genome_brute(3, 3, 2,  {\"ab\", \"ba\"}) == 17\n",
+    "assert decoding_genome_brute(3, 3, 0, set()) == 27\n",
+    "assert decoding_genome_brute(2, 1, 1, {\"aa\"}) == 0"
    ]
   }
  ],
